import org.apache.tools.ant.taskdefs.condition.Os
import javax.inject.Inject

plugins {
  id 'java-library'
  id 'groovy'
  id 'codenarc'
  id 'maven-publish'
  id 'net.ltgt.errorprone' version '4.4.0'
  id 'com.github.spotbugs' version '5.2.5'
}

defaultTasks 'jar'

base {
  archivesName = 'fjage'
}
group = 'com.github.org-arl'
version = new File(projectDir, 'VERSION').text.trim()

// get git commit
def commit = providers.exec {
  commandLine 'git', 'describe', '--always', '--abbrev=8', '--match', 'NOT A TAG', '--dirty=*'
}.standardOutput.asText.get().trim()

// configuration cache disallows Project APIs (exec/copy/delete) in task actions; use injected services instead
interface Ops {
  @Inject ExecOperations getExec()
  @Inject FileSystemOperations getFs()
}
def ops = objects.newInstance(Ops)

// check if npm exists
def npmcmd = Os.isFamily(Os.FAMILY_WINDOWS) ? "npm.cmd" : "npm"
def npmExists = providers.environmentVariable('PATH').map { path ->
  path.split(File.pathSeparator).any { new File(it, npmcmd).isFile() }
}.orElse(false).get()

// targetCompatibility = 1.8
// sourceCompatibility = 1.8

java {
  targetCompatibility = JavaVersion.VERSION_1_8
  sourceCompatibility = JavaVersion.VERSION_1_8
}

repositories {
  mavenCentral()
}

dependencies {
  api 'org.codehaus.groovy:groovy:2.5.23'
  api 'org.jline:jline:3.29.0:jdk8'
  api 'org.apache.commons:commons-lang3:3.20.0'
  api 'commons-io:commons-io:2.22.0'
  api 'uk.com.robust-it:cloning:1.9.12'
  api 'org.eclipse.jetty:jetty-server:9.4.58.v20250814'
  api 'org.eclipse.jetty:jetty-servlet:9.4.58.v20250814'
  api 'org.eclipse.jetty:jetty-rewrite:9.4.58.v20250814'
  api 'org.eclipse.jetty.websocket:websocket-server:9.4.58.v20250814'
  api 'com.google.code.gson:gson:2.14.0'
  api 'com.fazecast:jSerialComm:2.10.4'
  testImplementation 'junit:junit:4.13.2'
  testImplementation 'net.jodah:concurrentunit:0.4.6'

  // Last Error Prone release that runs on JDK 8.
  errorprone 'com.google.errorprone:error_prone_core:2.10.0'
  // CodeNarc has an isolated Groovy 3 runtime and does not change fjage's Groovy 2.5 API.
  codenarc 'org.codenarc:CodeNarc:3.4.0'
}

compileJava {
  options.compilerArgs << "-Xlint:all"
  options.compilerArgs << "-Xlint:-options"
}

compileTestJava {
  options.compilerArgs << "-Xlint:all"
  options.compilerArgs << "-Xlint:-options"
}

tasks.withType(JavaCompile).configureEach {
  options.errorprone {
    // These usages are deliberate API or scheduling choices in fjage.
    disable 'FutureReturnValueIgnored', 'JavaUtilDate', 'StringSplitter',
      'ThreadPriorityCheck', 'UnsynchronizedOverridesSynchronized'
  }
  options.compilerArgs << '-Werror'
}

codenarc {
  configFile = file('config/codenarc/codenarc.xml')
  reportFormat = 'html'
  ignoreFailures = false
}

spotbugs {
  // Last SpotBugs release that runs on JDK 8.
  toolVersion = '4.8.6'
  effort = 'max'
  reportLevel = 'high'
  excludeFilter = file('config/spotbugs/exclude.xml')
  ignoreFailures = false
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
  reports {
    html.required = true
    xml.required = false
  }
}

tasks.named('check') {
  setDependsOn([
    tasks.named('codenarcMain'),
    tasks.named('codenarcTest'),
    tasks.named('spotbugsMain'),
    tasks.named('spotbugsTest')
  ])
}

compileGroovy {
  options.compilerArgs << "-Xlint:all"
  options.compilerArgs << "-Xlint:-options"
}

tasks.register('buildjs') {
  inputs.files fileTree('gateways/js/src').include('**/*.js'), "gateways/js/package.json"
  outputs.dir "gateways/js/dist"
  def jsdir = file('gateways/js')
  def bundle = file('gateways/js/dist/fjage.js')
  doLast {
    if (npmExists) {
      ops.exec.exec {
        workingDir jsdir
        executable npmcmd
        args System.getenv('CI') != null ? 'ci' : "install"
        errorOutput = new ByteArrayOutputStream()
        standardOutput = new ByteArrayOutputStream()
      }
      ops.exec.exec {
        workingDir jsdir
        executable npmcmd
        args 'run', 'build'
      }
    } else if (bundle.exists()) {
      logger.info('npm not found. Using cached fjage.js build')
    } else {
      logger.warn('Not bundling fjage.js. WebShell will not work.')
    }
  }
}

tasks.register('jsdoc', Exec) {
  doFirst{
    if (!npmExists) {
      throw new GradleException("npm not found. Cannot generate JSDoc.")
    }
  }
  workingDir 'gateways/js'
  executable npmcmd
  args = ['run', 'docs']
}

tasks.register('updatexterm') {
  doFirst{
    if (!npmExists) {
      throw new GradleException("npm not found. Cannot update xterm.")
    }
  }
  def pkgjson = file('package.json')
  def rootdir = projectDir
  doLast {
    // create package.json with `{}` if it does not exist
    if (!pkgjson.exists()) {
      pkgjson.text = '{}'
    }
    ops.exec.exec {
      workingDir rootdir
      executable npmcmd
      args 'install', '@xterm/xterm@6.0.0', '@xterm/addon-attach@0.12.0', '@xterm/addon-fit@0.11.0', '@xterm/addon-web-links@0.12.0'
    }
    ops.fs.copy {
      from(['node_modules/@xterm/addon-web-links/lib', 'node_modules/@xterm/addon-attach/lib', 'node_modules/@xterm/addon-fit/lib', 'node_modules/@xterm/xterm/lib']) {
        include '*.js'
      }
      from('node_modules/@xterm/xterm/css') {
        include 'xterm.css'
      }
      into 'src/main/resources/org/arl/fjage/web/shell'
    }
    ops.fs.delete {
      delete "node_modules", "package.json", "package-lock.json"
    }
  }
}

jar {
  manifest {
    attributes (
        "Build-Owner": System.getenv().USER ?: "fjage",
        "Build-Timestamp": new Date().format('d-MM-yyyy_HH:mm:ss'),
        "Build-Version": "${project.version}/${commit}")
  }
  def libsdir = layout.buildDirectory.dir('libs')
  def runtimeDeps = configurations.runtimeClasspath
  doLast {
    ops.fs.copy {
      into libsdir
      from runtimeDeps
    }
  }
}

processResources {
  exclude '**/readme.md'
  with copySpec {
    from { tasks.named('buildjs').get()?.outputs?.files?.asFileTree?.matching {include 'dist/fjage.js'} ?: [] }
    into('org/arl/fjage/web/shell')
  }
}

test {
  dependsOn 'buildjs'
  exclude '**/loadtest/**'     // multi-container load tests run on demand via the loadTest task
  systemProperties project.properties.subMap(["manualJSTest"])
  systemProperties project.properties.subMap(["manualPyTest"])
  systemProperties project.properties.subMap(["manualCTest"])
  testLogging {
    events "passed", "skipped", "failed"
    exceptionFormat = "full"
  }
}

tasks.register('loadTest', Test) {
  description = 'Runs multi-container load & fault-injection tests (on demand only, see src/test/java/org/arl/fjage/loadtest/README.md)'
  group = 'verification'
  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath
  include '**/loadtest/**'
  outputs.upToDateWhen { false }
  testLogging {
    events "passed", "skipped", "failed"
    exceptionFormat "full"
  }
}

javadoc {
  options.addStringOption('Xdoclint:none', '-quiet')
}

////// tasks for MavenCentral deployment

java {
  withJavadocJar()
  withSourcesJar()
}

publishing {
  publications {
    maven(MavenPublication) {
      groupId = 'com.github.org-arl'
      artifactId = 'fjage'
      from components.java
    }
  }
  repositories {
    maven {
      name = "GitHubPackages"
      url = "https://maven.pkg.github.com/org-arl/fjage"
      credentials {
        username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
        password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
      }
    }
  }
}
